--- a/src/app/home-router/csgo/csgo.component.css
+++ b/src/app/home-router/csgo/csgo.component.css
@@ -46,10 +46,12 @@
   
   .resultScore{
     width: 100px;
-    font-weight: 700;
+    font-weight: 500;
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
+    font-size: 12px;
+    white-space:nowrap;
   }
 
   .notBold{
