--- a/src/app/home-router/csgo/match/match.component.html
+++ b/src/app/home-router/csgo/match/match.component.html
@@ -87,7 +87,7 @@
             <div class="card-body"> Inferno </div>
             <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/inferno.jpg" alt="Inferno" height="100px"
               width="290px">
-            <p class="resultInfo">{{ map.result }}</p>
+            <p class="resultInfo">{{ map.result | slice:0:-5}}</p>
           </div>
 
         </div>
@@ -99,7 +99,7 @@
             <div class="card-body"> Nuke </div>
             <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/nuke.jpg" alt="Nuke" height="100px"
              width="290px">
-            <p class="resultInfo">{{ map.result }}</p>
+            <p class="resultInfo">{{ map.result | slice:0:-5}}</p>
           </div>
 
         </div>
@@ -111,7 +111,7 @@
             <div class="card-body"> Cache </div>
             <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/cache.png" alt="Cache" height="100px"
               width="290px">
-            <p class="resultInfo">{{ map.result }}</p>
+            <p class="resultInfo">{{ map.result | slice:0:-5 }}</p>
           </div>
 
         </div>
@@ -123,7 +123,7 @@
             <div class="card-body"> Mirage </div>
             <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/mirage.png" alt="Mirage" height="100px"
               width="290px">
-            <p class="resultInfo">{{ map.result }}</p>
+            <p class="resultInfo">{{ map.result | slice:0:-5 }}</p>
           </div>
 
         </div>
@@ -134,7 +134,7 @@
             <div class="card-body"> Overpass </div>
             <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/overpass.png" alt="Overpass" height="100px"
               width="290px">
-            <p class="resultInfo">{{ map.result }}</p>
+            <p class="resultInfo">{{ map.result | slice:0:-5 }}</p>
           </div>
 
         </div>
@@ -146,7 +146,7 @@
             <div class="card-body"> Dust2 </div>
             <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/dust2.png" alt="Dust2" height="100px"
               width="290px">
-            <p class="resultInfo">{{ map.result }}</p>
+            <p class="resultInfo">{{ map.result | slice:0:-5}}</p>
           </div>
 
         </div>
@@ -157,7 +157,7 @@
             <div class="card-body"> Train </div>
             <img [ngClass]="{mapNotplayed:map.result === ''}" src="../../../../assets/csgo_maps/train.png" alt="Train" height="100px"
               width="290px">
-            <p class="resultInfo">{{ map.result }}</p>
+            <p class="resultInfo">{{ map.result| slice:0:-5 }}</p>
           </div>
 
         </div>
