--- a/src/app/home-router/csgo/csgo.component.html
+++ b/src/app/home-router/csgo/csgo.component.html
@@ -81,10 +81,75 @@
 
             <div class="row" style="padding-top: 2%;">
                 
-                    <div class="recentGamesHeader col-lg-2"><p class="text-center headlines"></p></div>
+                    <div class="recentGamesHeader col-lg-2"><p class="text-center headlines">Live Games</p>
+                        <table class="table table-sm table-hover table-dark text-center">
+                              
+                                <tbody>
+                               
+                                  <tr *ngFor="let post of _postArrayMatches; let i = index" (click)="selectId(post.id)" style="cursor: pointer;">
+                                    <ng-template [ngIf]="post.live == true">
+                                        
+                                        <td class="point-align">
+                                            {{post.date | date:'shortTime' }}
+                                        </td>
+                                        <td class="team-logo">
+                                            <img src="https://static.hltv.org/images/team/logo/{{post.team1.id}}" width="30px" height="30px" alt="{{post.team1.name}}">
+                                        </td>
+                                        <td class="team-align">
+                                          {{post.team1.name}}
+                                        </td>
+                  
+                                        <td>VS</td>
+                                    
+                  
+                                        <td class="team-logo">
+                                            <img src="https://static.hltv.org/images/team/logo/{{post.team2.id}}" width="30px" height="30px" alt="{{post.team2.name}}">
+                                        </td>
+                                        <td class="team-align">
+                                          {{post.team2.name}}
+                                        </td>
+                  
+                                        <input id="matchId" type="hidden" value="{{post.id}}">
+                                      </ng-template>
+                                  </tr>
+                                </tbody>
+                            </table>
+                    </div>
 
 
                     <div class="newsHeader col-lg-5"><p class="text-center headlines">Upcoming matches</p>
+                        <table class="table table-sm table-hover table-dark text-center">
+                             
+                                <tbody>
+                               
+                                  <tr *ngFor="let post of _postArrayMatches; let i = index" (click)="selectId(post.id)" style="cursor: pointer;">
+                                    <ng-template [ngIf]="(post.date | date:'mediumDate') == (today | date)">
+                                        
+                                        <td class="point-align">
+                                            {{post.date | date:'shortTime' }}
+                                        </td>
+                                        <td class="team-logo">
+                                            <img src="https://static.hltv.org/images/team/logo/{{post.team1.id}}" width="30px" height="30px" alt="{{post.team1.name}}">
+                                        </td>
+                                        <td class="team-align">
+                                          {{post.team1.name}}
+                                        </td>
+                  
+                                        <td>VS</td>
+                                    
+                  
+                                        <td class="team-logo">
+                                            <img src="https://static.hltv.org/images/team/logo/{{post.team2.id}}" width="30px" height="30px" alt="{{post.team2.name}}">
+                                        </td>
+                                        <td class="team-align">
+                                          {{post.team2.name}}
+                                        </td>
+                  
+                                        <input id="matchId" type="hidden" value="{{post.id}}">
+                                      </ng-template>
+                                  </tr>
+                                </tbody>
+                            </table>
                     </div>
 
 
