--- a/src/app/home-router/csgo/match/match.component.html
+++ b/src/app/home-router/csgo/match/match.component.html
@@ -5,8 +5,8 @@
   <div class="box-holder">
     <div class="row">
       <div class="col-md-4 col-xs-12 align-items">
-        <img src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team1.id}}" height="100" width="100" class="logo" alt="{{ _postArrayMatch.team1.name}}">
-        <p>{{ _postArrayMatch.team1.name }}</p>
+        <img src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch?.team1.id}}" height="100" width="100" class="logo" alt="{{ _postArrayMatch?.team1.name}}">
+        <p>{{ _postArrayMatch?.team1.name }}</p>
 <!-- 
         <div *ngIf="_postArrayMatch.team1.name != _postArrayMatch.winnerTeam.name && _postArrayMatch.format != 'Best of 3' || _postArrayMatch.team1.name != _postArrayMatch.winnerTeam.name && _postArrayMatch.format != 'Best of 3 (LAN)'">
           <p style="color:red;">0</p>
@@ -15,13 +15,14 @@
           <p style="color:green;">1</p>
         </div> -->
 
-        
-        <div *ngIf="_postArrayMatch.team1.name == _postArrayMatch.winnerTeam.name">
+        <div *ngIf="_postArrayMatch && _postArrayMatch['winnerTeam']">
+        <div *ngIf="_postArrayMatch?.team1.name == _postArrayMatch?.winnerTeam.name">
             <p style="color:green;">WIN</p>
           </div>
-          <div *ngIf="_postArrayMatch.team1.name != _postArrayMatch.winnerTeam.name">
+          <div *ngIf="_postArrayMatch?.team1.name != _postArrayMatch?.winnerTeam.name">
             <p style="color:red;">LOSE</p>
           </div>
+        </div>
 
 
       <!--   <div *ngIf="_postArrayMatch.team1.name == _postArrayMatch.winnerTeam.name && _postArrayMatch.format == 'Best of 3' || _postArrayMatch.team1.name == _postArrayMatch.winnerTeam.name && _postArrayMatch.format == 'Best of 3 (LAN)'">
@@ -38,17 +39,17 @@
       </div>
 
       <div class="col-md-4 col-xs-12 align-items">
-        <h4 style="color: #0ca2cf;">{{ _postArrayMatch.event.name }}</h4>
-        <p style="font-size:11px;">{{ _postArrayMatch.date | date:mediumDate }}
-          <Br> {{ _postArrayMatch.date | date:'shortTime' }}</p>
-        <p>{{ _postArrayMatch.format }}</p>
-        <p *ngIf="_postArrayMatch.live == false">Match over</p>
-        <p *ngIf="_postArrayMatch.live == true">Live</p>
+        <h4 style="color: #0ca2cf;">{{ _postArrayMatch?.event.name }}</h4>
+        <p style="font-size:11px;">{{ _postArrayMatch?.date | date:mediumDate }}
+          <Br> {{ _postArrayMatch?.date | date:'shortTime' }}</p>
+        <p>{{ _postArrayMatch?.format }}</p>
+        <p *ngIf="_postArrayMatch?.live == false">Match over</p>
+        <p *ngIf="_postArrayMatch?.live == true">Live</p>
       </div>
 
       <div class="col-md-4 col-xs-12 align-items">
-        <img src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team2.id}}" height="100" width="100" class="logo" alt="{{ _postArrayMatch.team2.name}}">
-        <p>{{ _postArrayMatch.team2.name}}</p>
+        <img src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch?.team2.id}}" height="100" width="100" class="logo" alt="{{ _postArrayMatch?.team2.name}}">
+        <p>{{ _postArrayMatch?.team2.name}}</p>
 
 
 
@@ -60,14 +61,14 @@
         </div>
  -->
 
-
-        <div *ngIf="_postArrayMatch.team2.name == _postArrayMatch.winnerTeam.name">
-          <p style="color:green;">WIN</p>
+        <div *ngIf="_postArrayMatch && _postArrayMatch['winnerTeam']">
+          <div *ngIf="_postArrayMatch?.team2.name == _postArrayMatch?.winnerTeam.name">
+            <p style="color:green;">WIN</p>
+          </div>
+          <div *ngIf="_postArrayMatch?.team2.name != _postArrayMatch?.winnerTeam.name">
+            <p style="color:red;">LOSE</p>
+          </div>
         </div>
-        <div *ngIf="_postArrayMatch.team2.name != _postArrayMatch.winnerTeam.name">
-          <p style="color:red;">LOSE</p>
-        </div>
-
       </div>
 
     </div>
@@ -80,7 +81,7 @@
 
   <div class="box-holder">
     <div class="row align-maps">
-      <div *ngFor="let map of _postArrayMatch.maps" [ngSwitch]="map.name">
+      <div *ngFor="let map of _postArrayMatch?.maps" [ngSwitch]="map.name">
 
         <div class="col-md-12" *ngSwitchCase="'inf'">
           <div class="card text-white bg-dark mb-3 d-inline-block">
@@ -178,28 +179,28 @@
       <div class="box-holder-lineup">
           
         <div class="row players">
-        <div class="col-md-2 moveCenter" *ngFor="let playerTM1 of _postArrayMatch.players.team1">
+        <div class="col-md-2 moveCenter" *ngFor="let playerTM1 of _postArrayMatch?.players.team1">
           <img class="border" src="https://static.hltv.org/images/playerprofile/thumb/{{playerTM1.id}}/400.jpeg?v=4" height="100px" width="100px;">
           <p class="playerName">{{playerTM1.name}}</p>
         </div>
         <img style="margin-right: 5%;
-        margin-top: 3%;" src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team1.id}}" height="70" width="70" class="logo" alt="{{ _postArrayMatch.team1.name}}">
+        margin-top: 3%;" src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch?.team1.id}}" height="70" width="70" class="logo" alt="{{ _postArrayMatch?.team1.name}}">
       </div>
     </div>
 
 <div class="box-holder-lineup">
       <div class="row players">
-          <div class="col-md-2 moveCenter" *ngFor="let playerTM2 of _postArrayMatch.players.team2">
+          <div class="col-md-2 moveCenter" *ngFor="let playerTM2 of _postArrayMatch?.players.team2">
             <img class="border" src="https://static.hltv.org/images/playerprofile/thumb/{{playerTM2.id}}/400.jpeg?v=4" alt="{{playerTM2.name}}" height="100px" width="100px;">
             <p class="playerName">{{playerTM2.name}}</p>
           </div>
           <img style="margin-right: 5%;
-          margin-top: 3%;" src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch.team2.id}}" height="70" width="70" class="logo" alt="{{ _postArrayMatch.team2.name}}">
+          margin-top: 3%;" src="https://static.hltv.org/images/team/logo/{{ _postArrayMatch?.team2.id}}" height="70" width="70" class="logo" alt="{{ _postArrayMatch?.team2.name}}">
         </div>
 
       </div>
 
-    <div class="headline" *ngIf="_postArrayMatch.highlights != ''">
+    <div class="headline" *ngIf="_postArrayMatch?.highlights != ''">
       <p style="margin-top: -3.6%;
       font-size: 24px;">Highlights</p>
     </div>
@@ -207,7 +208,7 @@
 
   <div class="holder">
      <div class="row">
-    <div class="col-md-2" *ngFor="let highlight of _postArrayMatch.highlights">
+    <div class="col-md-2" *ngFor="let highlight of _postArrayMatch?.highlights">
         <a style="color:white" href={{highlight.link}} target="_blank">
       <div class="highlight-box" >
       <p style="font-size: 12px;">
